# cerebro-llm

./: .gitignore  Dockerfile  _list_checkpoints.py  cerebro_finetune_unsloth.ipynb  cerebro_train_colab.ipynb  docker-compose.yml  generate.py  pyproject.toml  train.py  train_unsloth.py
.github/workflows/: ci.yml
cerebro/: __init__.py  cli.py  config.py
cerebro/agents/: __init__.py
cerebro/api/: __init__.py
cerebro/chat/: __init__.py  memory.py
cerebro/computer/: __init__.py
cerebro/inference/: __init__.py  engine.py  queue.py  sampler.py
cerebro/model/: __init__.py  attention.py  block.py  cerebro_model.py  entropic.py  ffn.py  norm.py  quantization.py  quaternion.py  reasoning.py  recursion.py  rope.py
cerebro/rag/: __init__.py
cerebro/search/: __init__.py
cerebro/security/: __init__.py  audit.py  auth.py  content_safety.py  pqc.py  weight_encryption.py
cerebro/server/: __init__.py
cerebro/tokenizer/: __init__.py  tokenizer.py
cerebro/tools/: __init__.py  code_interpreter.py  registry.py
cerebro/training/: __init__.py  alignment.py  chat_template.py  curriculum.py  data.py  distributed.py  evaluator.py  finetune.py  mixing.py  monitoring.py  optimizer.py  scheduler.py  tokenize.py  train.py  trainer.py
cerebro/utils/: logging.py
cerebro/vision/: __init__.py
datasets/: README.txt
pipeline/: __init__.py  detector.py  downloader.py  hf_catalog.py  hf_search.py  runner.py
tests/: test_features.py  test_model.py  test_monitoring.py  test_quaternion.py  test_security.py  test_tokenizer.py  test_training.py
(+1 files in other folders)
